Thu May  3 08:37:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/Bug_2609_Regression_Test.cpp:
        * ace/Svc_Handler.cpp:
        * tests/tests.mpc:
          Fixed bug 2609, take into account reference counted svc handlers.
          Thanks to Milan Cvetkovic <milan dot cvetkovic at mpathix dot com>
          for reporting this, providing the patch and the regression test

        * ace/config-hpux-11.00.h:
          dllexport with template specializations doesn't work for HP aCC
          3.x which runs on PARISC. Reported this to HP and for the moment
          disable dllexport usage on PARISC totally

        * ace/Dev_Poll_Reactor.cpp:
        * ace/Event_Handler.cpp:
        * ace/Timer_Queue_T.cpp:
        * ace/WFMO_Reactor.cpp:
          Use bool when possible

Wed May  2 18:43:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Updated to mention the update of release.xml in the autobuild archive
          for the integrated build/test scoreboard

Wed May  2 16:04:21 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/depgen.pl:

          Fixed a bug where the Depgen modules wouldn't be found unless
          MPC_ROOT was set.

        * docs/bczar/bczar.html:

          Changed a couple of < > to &lt; &gt;.

Wed May  2 14:39:59 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Dev_Poll_Reactor.cpp: Always remove the notification byte
          from the pipe, avoiding an infinite loop.  Thanks to Eider
          Oliveira <eider dot oliveira at gmail dot com> for this fix.

Wed May  2 14:12:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Naming/Naming_Context.h:
          Fixed memory leak, thanks to Kanghee Yoon <propar at gmail dot com>
          for reporting this.

Wed May  2 12:49:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/ARGV.cpp: