@@ -1,3 +1,10 @@
+Thu May  3 09:54:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        Reverted the change below, it breaks the gcc builds
+
+        Thu May  3 08:37:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+        * ace/Svc_Handler.cpp:
+
 Thu May  3 08:37:37 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/run_test.lst:
